Feat: swagger 세팅, 메인 페이지 필터링
